[FIX] Definitions alignement

--- a/src/index.css
+++ b/src/index.css
@@ -557,6 +557,7 @@ a {
   .definitions-grid {
     display: flex;
     flex-direction: column;
+    align-items: center;
   }  
 }
 
